err/decipher.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decipher'...
Compiling './lib/python3.5/site-packages/decipher/beacon.py'...
***   File "./lib/python3.5/site-packages/decipher/beacon.py", line 110
    os.chmod(self.inifile, 0600)
                              ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/decipher/commands'...
Compiling './lib/python3.5/site-packages/decipher/commands/batch.py'...
***   File "./lib/python3.5/site-packages/decipher/commands/batch.py", line 22
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/decipher/commands/eval.py'...
***   File "./lib/python3.5/site-packages/decipher/commands/eval.py", line 23
    except BeaconAPIException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/decipher/commands/login.py'...
***   File "./lib/python3.5/site-packages/decipher/commands/login.py", line 16
    print "You already have defined an API key for section %r." % api.section
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/decipher/commands/rekey.py'...
***   File "./lib/python3.5/site-packages/decipher/commands/rekey.py", line 14
    print "Rekeying..."
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/decipher/commands/xt.py'...
***   File "./lib/python3.5/site-packages/decipher/commands/xt.py", line 7
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/decipher-29.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
